# OC_FinSight_IA

./: .gitignore  README.md  inside_projet.md  pyproject.toml  rapport_cadrage_projet_final.md
app/: streamlit_app.py
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  04_shap_explainability.ipynb  05_rag_pipeline.ipynb
scripts/: train_pipeline.py
src/: config.py
src/agent/: finsight_agent.py
src/data/: collector.py  features.py
src/explainability/: shap_plots.py
src/models/: evaluate.py  predict.py  train.py
src/rag/: ingest.py  retriever.py
tests/: test_agent.py  test_features.py  test_predict.py  test_rag.py
