[project]
name = "finsight"
version = "0.1.0"
description = "Plateforme de Prédiction & Analyse de Risque pour Investisseurs Particuliers"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Data
    "yfinance>=0.2.40",
    "fredapi>=0.5.2",
    "newsapi-python>=0.2.7",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # Feature engineering
    "ta>=0.11.0",
    # ML
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "shap>=0.44.1,<0.50",
    "mlflow>=2.12.0",
    # RAG
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    # LLM
    "mistralai>=1.0.0",
    # Interface
    "streamlit>=1.35.0",
    # Utils
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.22.0",
    # Notebooks
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "langchain-mistralai>=1.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
